--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
+    "@mui/x-data-grid": "^5.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-error-boundary": "^3.1.4",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-window": "^1.8.7",
+    "recharts": "^2.1.9",
+    "sass": "^1.51.0",
+    "semantic-ui-css": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
