--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
+    "react-number-format": "^4.9.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-window": "^1.8.7",
