--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "next": "^12.3.1",
+    "next-pwa": "^5.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-number-format": "^4.9.3",
     "react-pdf": "^5.7.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-window": "^1.8.7",
     "recharts": "^2.1.9",
     "sass": "^1.51.0",
@@ -64,7 +63,6 @@
       "last 1 safari version"
     ]
   },
-
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
