--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^4.2.0",
+    "faker": "^6.6.6",
     "next": "^12.3.1",
+    "next-pwa": "^5.6.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-number-format": "^4.9.3",
@@ -63,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
