--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "@mui/x-data-grid": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.19",
     "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^4.2.0",
+    "dayjs": "^1.11.7",
     "faker": "^6.6.6",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
